operator-gitea/src/main/resources/manifests/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "gitea"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gitea"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "gitea"
    spec:
      serviceAccountName: "gitea"
      containers:
      - name: gitea
        image: "quay.io/gpte-devops-automation/gitea:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: "200m"
            memory: "1Gi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: gitea-repositories
          mountPath: /gitea-repositories
        - name: gitea-config
          mountPath: /home/gitea/conf
        #- name: trusted-ca
        #  mountPath: /etc/ssl/certs/service-ca-bundle-ocp.trust.crt
        #  subPath: service-ca-bundle-ocp.trust.crt
          #/etc/pki/ca-trust/extracted/pem
          readOnly: true
      volumes:
      - name: gitea-repositories
        persistentVolumeClaim:
          claimName: "gitea-pvc"
      - name: gitea-config
        configMap:
          name: "gitea-config"
          items:
            - key: app.ini
              path: app.ini
      - name: trusted-ca
        configMap:
          name: gitea-trust-bundle
          items:
            #- key: ca-bundle.crt
            #  path: ca-bundle-ocp.trust.crt
            #- key: service-ca.crt
            #  path: service-ca-bundle-ocp.trust.crt
