operator-gitea/src/main/resources/manifests/gitea/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "gitea"
  labels:
    app: "gitea"
spec:
  to:
    kind: Service
    name: "gitea"
